# rust_wasm_graphics_engine

./: .gitignore  CLAUDE.md  Cargo.toml  deno.json  fresh.config.ts  fresh.gen.ts  rust_wasm_graphics_engine.code-workspace  tailwind.config.ts
.cargo/: config.toml
engine/: Cargo.toml
engine/src/: camera.rs  geometry.rs  lib.rs  math.rs  rectangle.rs  renderer.rs  shaders.rs  shapes.rs  solar_system.rs  sphere.rs  starfield.rs  triangle.rs
engine/src/rendering/: mod.rs  solar_system_renderer.rs
engine/src/shapes/: mod.rs  rectangle.rs  sphere.rs  traits.rs  triangle.rs
islands/: GraphicsViewer.tsx  RustWasmGraphics.tsx  SimpleGraphics.tsx  SimpleWasm.tsx  SolarSystem.tsx
static/: graphics_engine.d.ts  graphics_engine.js  graphics_engine_bg.wasm  graphics_engine_bg.wasm.d.ts  wasm-init.js
web/: deno.json  dev.ts  fresh.gen.ts
web/islands/: GraphicsEngine.tsx  GraphicsEngineSimple.tsx  RustWasmGraphics.tsx  SolarSystem.tsx
web/routes/: _app.tsx  index.tsx  solar-system.tsx
web/static/: graphics_engine.d.ts  graphics_engine.js  graphics_engine_bg.wasm  graphics_engine_bg.wasm.d.ts  package.json  wasm-loader.js
